@@ -1,9 +1,8 @@
-import com.typesafe.sbt.SbtAspectj.AspectjKeys._
-import com.typesafe.sbt.SbtAspectj._
+name := """k2"""
 
-name := "k2"
+version := "3.0-SNAPSHOT"
 
-version := "3.0"
+//lazy val root = (project in file(".")).enablePlugins(PlayScala)
 
 lazy val `core` = (project in file("modules/core")).enablePlugins(PlayScala)
 
@@ -17,31 +16,25 @@ lazy val `k2` = (project in file(".")).enablePlugins(PlayScala)
   .dependsOn(web)
   .aggregate(core, app, web)
 
-scalaVersion := "2.10.3"
+scalaVersion := "2.10.5"
 
 libraryDependencies ++= Seq(
-  javaJdbc,
-  javaEbean,
+  jdbc,
   cache,
-  javaWs,
-  filters,
-  "org.mongodb" % "mongo-java-driver" % "3.0.0",
-  "org.springframework" % "spring-aspects" % "3.2.2.RELEASE",
-  "org.springframework" % "spring-aop" % "3.2.2.RELEASE",
-  "org.springframework" % "spring-tx" % "3.2.2.RELEASE",
-  "org.aspectj" % "aspectjrt" % "1.8.4",
-  "org.aspectj" % "aspectjweaver" % "1.8.4",
-  "com.lvxingpai" %% "fileappender" % "0.1-SNAPSHOT",
-  play.PlayImport.cache,
-  "com.github.mumoshu" %% "play2-memcached" % "0.6.0",
-  "org.apache.thrift" % "libthrift" % "0.9.2",
-  "com.twitter" %% "scrooge-core" % "3.18.1",
-  "com.twitter" %% "finagle-thrift" % "6.25.0"
+  ws,
+  specs2 % Test
 )
 
-javaOptions ++= Seq("-Xmx2048M", "-XX:MaxPermSize=2048M")
+resolvers += "scalaz-bintray" at "http://dl.bintray.com/scalaz/releases"
 
-unmanagedResourceDirectories in Test <+= baseDirectory(_ / "target/web/public/test")
+// Play provides two styles of routers, one expects its actions to be injected, the
+// other, legacy style, accesses its actions statically.
+routesGenerator := InjectedRoutesGenerator
+
+// AspectJ settings
+
+import com.typesafe.sbt.SbtAspectj.AspectjKeys._
+import com.typesafe.sbt.SbtAspectj._
 
 aspectjSettings
 
